* 0.111

- Support JSON serialization of Java 7 types

* 0.110

- Fix log levels being reset by garbage collection
- Reduce default http response buffer size from 64KB to zero bytes
- Add MoreFutures which contains utility methods for futures

* 0.109

- Add framework to override defaults of any configuration object

* 0.108

- Change default HTTP server accept queue size to 8000 from 50
- Upgrade to Airbase 38
- Exclude link local addresses in NodeInfo

* 0.107

- Remove dependency on SLF4J from log manager

* 0.106

- Upgrade to Airbase 36
- Upgrade to Jetty 9.2.11.M0
- Enable Jetty Client connection sweeper
- Reduce JettyHttpClient selectors to 2

* 0.105

- Upgrade to Airbase 35
- Upgrade to Jetty 9.2.10.v20150310

* 0.104

- Upgrade to Airbase 34

* 0.103

- Upgrade to Airbase 32
- Upgrade to Slice 0.10

* 0.102

- Fix bug when deserializing dense HLL v1 with no overflow bucket
- Verify HLLs have the same bucket count before merging them
- Add thread factory threads to a ThreadGroup
- Add more JettyHttpClient stats and debug operations

* 0.101

- New layout for dense HLL
- Fix bug in cardinality estimates produced by sparse HLL
- Expose request queue depth stats in HttpClient

* 0.100

- New algorithm and representation for sparse HLL

* 0.99

- Java 8 is now required
- Support JSON serialization of Java 8 types

* 0.98

- Expose JettyHttpClient dump methods to JMX
- Make HyperLogLog.addHash public

* 0.97

- Add AsyncSemaphore concurrent utility
- Add /v1/jmx/mbean/{objectName}/{attributeName} to get a single MBean attribute value

* 0.96

- Add AbstractConfigurationAwareModule for accessing config at binding time
- Upgrade to Airbase 28
- Upgrade to Guava 18.0
- Remove server archetype builders
- Remove deprecated AsyncHttpClient and bindAsyncHttpClient()
- Un-deprecate discovery.uri config property
- Show stack traces in HTTP error responses

* 0.95

- Add AsyncResponseHandler utility for building async HTTP responses